syntax = "proto3";

package users;

import "google/protobuf/empty.proto";

enum UserStatus {
  OFFLINE = 0;
  ONLINE = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  UserStatus status = 4;
}

message UserRequest {
  int32 id = 1;
}

service Users {
  rpc GetUser(UserRequest) returns (User);
  rpc CreateUser(stream User) returns (google.protobuf.Empty);
  rpc GetUsers(google.protobuf.Empty) returns (stream User);
}
